update ui and arch of front + some functions
